<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.find_property.PropertyFindActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="1">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="0.2"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

      <ImageView
          android:id="@+id/ivLogo"
          android:layout_width="200dp"
          android:layout_height="80dp"
          android:layout_centerHorizontal="true"
          android:src="@drawable/ic_logo"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/ivLogo"
          android:layout_centerHorizontal="true"
          android:layout_marginStart="5dp"
          android:layout_marginTop="-20dp"
          android:fontFamily="@font/arial_nova_bold"
          android:text="@string/app_name"
          android:textAllCaps="true"
          android:textColor="@color/colorPrimaryDark"
          />

    </RelativeLayout>

  </RelativeLayout>

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="0.8"
      android:background="@drawable/ic_login_bg"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:paddingLeft="30dp"
      android:paddingRight="30dp"
      android:paddingTop="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginStart="5dp"
          android:fontFamily="@font/arial_nova_bold"
          android:text="@string/select_location"
          android:textAllCaps="true"
          android:textColor="@color/colorPurple"
          android:textSize="25sp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginBottom="30dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="5dp"
          android:fontFamily="@font/arial_nova"
          android:text="@string/location_hint"
          android:textAllCaps="false"
          android:textColor="@color/colorPurple"
          android:textSize="13sp"
          />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        >

      <EditText
          android:id="@+id/etStreetAddress"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:drawableEnd="@drawable/ic_pin"
          android:fontFamily="@font/arial_nova"
          android:hint="@string/street_address"
          android:text="151 Battle Green"
          android:inputType="text"
          android:paddingBottom="12dp"
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:paddingTop="12dp"
          android:textSize="14sp"
          />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        >

      <EditText
          android:id="@+id/etCity"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:drawableEnd="@drawable/ic_pin"
          android:fontFamily="@font/arial_nova"
          android:hint="@string/city"
          android:inputType="text"
          android:text="Rochester"
          android:paddingBottom="12dp"
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:paddingTop="12dp"
          android:textSize="14sp"
          />

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <androidx.cardview.widget.CardView
          android:id="@+id/cardView"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_margin="5dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/cardView2"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:cardBackgroundColor="@color/white"
          app:cardCornerRadius="10dp"
          app:cardElevation="5dp"
          >

        <EditText
            android:id="@+id/etState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:drawablePadding="10dp"
            android:hint="@string/state"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:text="NY"
            android:textSize="14sp"
            />

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cardView2"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_margin="5dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/cardView"
          app:layout_constraintTop_toTopOf="parent"
          app:cardBackgroundColor="@color/white"
          app:cardCornerRadius="10dp"
          app:cardElevation="5dp"
          >

        <EditText
            android:id="@+id/etZip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:drawablePadding="10dp"
            android:hint="@string/zip_code"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:text="14624"
            android:textSize="14sp"
            />

      </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        android:focusable="true"
        >

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/ic_login"
          >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_circle_arrow"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/arial_nova_bold"
            android:text="@string/get_started"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

      </RelativeLayout>

    </androidx.cardview.widget.CardView>

  </LinearLayout>

</LinearLayout>


<!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.find_property.PropertyFindActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="1">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="0.2"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

      <ImageView
          android:id="@+id/ivLogo"
          android:layout_width="200dp"
          android:layout_height="80dp"
          android:layout_centerHorizontal="true"
          android:src="@drawable/ic_logo"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/ivLogo"
          android:layout_centerHorizontal="true"
          android:layout_marginStart="5dp"
          android:layout_marginTop="-20dp"
          android:fontFamily="@font/arial_nova_bold"
          android:text="@string/app_name"
          android:textAllCaps="true"
          android:textColor="@color/colorPrimaryDark"
          />

    </RelativeLayout>

  </RelativeLayout>

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="0.8"
      android:background="@drawable/ic_login_bg"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:paddingLeft="30dp"
      android:paddingRight="30dp"
      android:paddingTop="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginStart="5dp"
          android:fontFamily="@font/arial_nova_bold"
          android:text="@string/select_location"
          android:textAllCaps="true"
          android:textColor="@color/colorPurple"
          android:textSize="25sp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginBottom="30dp"
          android:layout_marginStart="5dp"
          android:layout_marginTop="5dp"
          android:fontFamily="@font/arial_nova"
          android:text="@string/location_hint"
          android:textAllCaps="false"
          android:textColor="@color/colorPurple"
          android:textSize="13sp"
          />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        >

      <EditText
          android:id="@+id/etStreetAddress"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:drawableEnd="@drawable/ic_id"
          android:fontFamily="@font/arial_nova"
          android:hint="@string/street_address"
          android:text="151 Battle Green"
          android:inputType="text"
          android:paddingBottom="12dp"
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:paddingTop="12dp"
          android:textSize="14sp"
          />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        >

      <EditText
          android:id="@+id/etCity"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:drawableEnd="@drawable/ic_pin"
          android:fontFamily="@font/arial_nova"
          android:hint="@string/city"
          android:inputType="text"
          android:text="Rochester"
          android:paddingBottom="12dp"
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          android:paddingTop="12dp"
          android:textSize="14sp"
          />

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <androidx.cardview.widget.CardView
          android:id="@+id/cardView"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_margin="5dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/cardView2"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:cardBackgroundColor="@color/white"
          app:cardCornerRadius="10dp"
          app:cardElevation="5dp"
          >

        <EditText
            android:id="@+id/etState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:drawablePadding="10dp"
            android:hint="@string/state"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:text="NY"
            android:textSize="14sp"
            />

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cardView2"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_margin="5dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/cardView"
          app:layout_constraintTop_toTopOf="parent"
          app:cardBackgroundColor="@color/white"
          app:cardCornerRadius="10dp"
          app:cardElevation="5dp"
          >

        <EditText
            android:id="@+id/etZip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:drawablePadding="10dp"
            android:hint="@string/zip_code"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:text="14624"
            android:textSize="14sp"
            />

      </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        android:focusable="true"
        >

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/ic_login"
          >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_circle_arrow"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/arial_nova_bold"
            android:text="@string/get_started"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

      </RelativeLayout>

    </androidx.cardview.widget.CardView>

  </LinearLayout>

</LinearLayout>

-->